--- a/website/src/index.css
+++ b/website/src/index.css
@@ -62,6 +62,7 @@
 .overlay {
   position: absolute;
   z-index:1;
+  font-family: xolonium;
 }
 
 .header-title {
@@ -108,6 +109,11 @@
     -ms-flex: 1;
     flex: 1;
   }
+}
+
+@font-face {
+  font-family: xolonium;
+  src: url('./fonts/Xolonium.otf');
 }
 
 .overflow-hidden { overflow: hidden; }
