--- a/website/src/index.css
+++ b/website/src/index.css
@@ -46,12 +46,18 @@
   background-image: url('./images/wealth.jpg');
 }
 
+.bg-about-img {
+  background-image: url('./images/about.jpg');
+}
+
 .bgc {
   background-color: #151515;
 }
 
 .video {
   position: relative;
+  max-width: 100%;
+  max-height: 100%;
   min-width: 50%;
   min-height: 50%;
   width: auto;
