--- a/website/src/catalogue.css
+++ b/website/src/catalogue.css
@@ -4,7 +4,6 @@
 
 .cat-table {
   white-space: nowrap;
-  background-color: #15151500;
   overflow: hidden;
 }
 
@@ -13,14 +12,27 @@
 }
 
 .thumbnail {
-  width: 40%;
+  max-width: 125px;
+  min-width: 125px;
   height: auto;
 }
 
 .img-col {
-  width: 20%;
+  width: 1%;
 }
 
 .key-col {
-  width: 15%;
+  /* width: 10%; */
+}
+
+.bonus-col {
+  /* width: 12%; */
+}
+
+.bonus-row {
+  padding-left: 0 !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
 }
