--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,6 +1,6 @@
 .img-logo {
-  max-width: 13%;
-  min-width: 10%;
+  max-width: 150px;
+  min-width: 125px;
   height: auto;
 }
 
@@ -62,6 +62,10 @@
   z-index:0;
 }
 
+.main-title {
+  font-family: xolonium;
+}
+
 .overlay {
   position: absolute;
   z-index:1;
@@ -70,7 +74,6 @@
 
 .header-title {
   color: #f7f7f7;
-  font-size: 3.25rem;
 }
 
 .text-outline {
@@ -82,53 +85,25 @@
 }
 
 .site-header {
-  background-color: rgba(0, 0, 0, 0.6);
-  -webkit-backdrop-filter: saturate(180%) blur(20px);
-  backdrop-filter: saturate(180%) blur(20px);
-}
-.site-header a {
-  color: #999;
-  transition: ease-in-out color .15s;
-}
-.site-header a:hover {
-  color: #fff;
-  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #f7f7f7;
 }
 
 .App-header {
-    background-color: ##0A0A0A;
+  background-color: ##0A0A0A;
 }
 
-/*
- * Extra utilities
- */
-
-.flex-equal > * {
-  -ms-flex: 1;
-  flex: 1;
+.navbar-nav .nav-item .nav-link {
+  color: #d6d6d6;
 }
-@media (min-width: 768px) {
-  .flex-md-equal > * {
-    -ms-flex: 1;
-    flex: 1;
-  }
+.navbar-nav .nav-item.active .nav-link,
+.navbar-nav .nav-item:hover .nav-link {
+    color: #f7f7f7;
 }
 
-/* Extra small devices (phones, up to 480px) */
-@media (max-width: @screen-xs-max) {
-  h1 {font-size: 1.25rem !important;}
-  h2 {font-size: 1.0rem !important;}
-  display-3 {font-size: 2.25rem !important;}
-  display-4 {font-size: 1.75rem !important;}
+.menu-button {
+  color: #d6d6d6;
 }
-/* Small devices (tablets, 768px and up)*/
-@media (min-width: @screen-sm-min) {
-  h1 {font-size: 1.9rem !important;}
-  h2 {font-size: 1.5rem !important;}
-  display-3 {font-size: 3.35rem !important;}
-  display-4 {font-size: 2.6rem !important;}
-}
-
 
 @font-face {
   font-family: xolonium;
