--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,6 +1,5 @@
 .img-logo {
-  max-width: 150px;
-  min-width: 125px;
+  width: 25%;
   height: auto;
 }
 
@@ -109,5 +108,21 @@
   font-family: xolonium;
   src: url('./fonts/Xolonium.otf');
 }
+
+/*
+::::::::::::::::::::::::::::::::::::::::::::::::::::
+Bootstrap 4 breakpoints
+*/
+
+/* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+@media (min-width: 768px) {
+  .img-logo {width: 18%;}
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+  .img-logo {width: 15%;}
+}
+
 
 .overflow-hidden { overflow: hidden; }
