--- a/website/src/index.css
+++ b/website/src/index.css
@@ -1,6 +1,6 @@
 .img-logo {
-  width: 25%;
-  height: auto;
+  width: 20%;
+  height: 20%;
 }
 
 .footer-logo {
@@ -116,12 +116,12 @@ Bootstrap 4 breakpoints
 
 /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
 @media (min-width: 768px) {
-  .img-logo {width: 15%;}
+  .img-logo {width: 15%; height: 15%;}
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
-  .img-logo {width: 12%;}
+  .img-logo {width: 12%; height: 12%;}
 }
 
 
